Styling updates to the homepage sidebar blocks, plus a couple of fixes to the navigation overspill and view node titles.

--- a/sites/all/themes/zen-sullivan/sass/component-styles/_blocks.scss
+++ b/sites/all/themes/zen-sullivan/sass/component-styles/_blocks.scss
@@ -249,3 +249,25 @@
     padding-right: 3%
   }
 }
+
+// Homepage sidebar blocks
+.block {
+  .sidebar & {
+    .blog-title-list,
+    .videos-list,
+    .articles-list {
+      h3 {
+        @extend %sidebar-item-title;
+      }
+      span {
+        @extend %sidebar-date;
+      }
+      .views-row {
+        margin-bottom: 1em;
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+}
