--- a/sites/all/themes/zen-sullivan/sass/component-styles/_views-styles.scss
+++ b/sites/all/themes/zen-sullivan/sass/component-styles/_views-styles.scss
@@ -47,7 +47,7 @@
 .view {
   .views-row {
     .node-title {
-      font-family: $opensans-cond;
+      // font-family: $opensans-cond;
     }
   }
 }
