--- a/sites/all/themes/zen-sullivan/sass/global/_custom.scss
+++ b/sites/all/themes/zen-sullivan/sass/global/_custom.scss
@@ -203,3 +203,18 @@
 @mixin button-green {
   @include button(lighten($green, 20%));
 }
+
+// Extends
+
+// Sidebar block styles
+%sidebar-item-title {
+  font-family: $font-body;
+  font-size: $h5-font-size;
+  line-height: 1.5;
+  margin: 0;
+}
+%sidebar-date {
+  color: $gray;
+  font-size: .85em;
+  font-style: italic;
+}
